Scrollbar fix?

--- a/staticfiles/templates/css/main.css
+++ b/staticfiles/templates/css/main.css
@@ -76,7 +76,7 @@ main {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-html::-webkit-scrollbar {
+body::-webkit-scrollbar {
   display: none !important;
 }
 
